@@ -1,3 +1,5 @@
+- Refactor: Remove usage of ITreasuryBrigdeAPI#getTuitionForRegistrationTreasuryEvent [#qubIT-Fenix-6565]
+
 2.24.9 (06-01-2025)
 - Refactor: Update XSD to RAIDES24 (phase 1) [UL-REIT-4198]
 - Refactor: Remove the IngestSasScholarshipSicabe task [#qubIT-Fenix-6348]
